--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -3,9 +3,9 @@
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: Academic # Website name
+title: Marta Victoria # Website name
 baseurl: '' # Website URL
-copyright: '' # Footer text, e.g. '© {year} Me'
+copyright: 'Copyright 2021 © Marta Victoria. This work is licensed under a Creative Commons Attribution 4.0 International license.' # Footer text, e.g. '© {year} Me'
 
 ############################
 ## LANGUAGE
