--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -17,7 +17,7 @@ main:
     weight: 30
     
   - name: Public Outreach
-    url: '#publich_outreach'
+    url: '#public_outreach'
     weight: 40
 
 # Link to a PDF of your resume/CV from the menu.
