--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -1,7 +1,7 @@
 
 
 title: Marta Victoria # Website name
-baseurl: '' # Website URL
+baseurl: 'https://www.martavictoria.org/' # Website URL
 copyright: 'Copyright 2021 © Marta Victoria. This work is licensed under a Creative Commons Attribution 4.0 International license.' # Footer text, e.g. '© {year} Me'
 
 ############################
