--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -11,17 +11,21 @@ main:
   - name: Publications
     url: '#publications'
     weight: 20
+
+  - name: Research
+    url: '#research'
+    weight: 30
         
   - name: Teaching
     url: '#teaching'
-    weight: 30
+    weight: 40
     
   - name: Public Outreach
     url: '#public_outreach'
-    weight: 40
+    weight: 50
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
   - name: CV
     url: uploads/resume.pdf
-    weight: 50
+    weight: 60
