--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,24 +8,24 @@ main:
     url: '#about'
     weight: 10
 
-  - name: Publications
-    url: '#publications'
-    weight: 20
+ # - name: Publications
+ #   url: '#publications'
+ #   weight: 20
 
   - name: Research
     url: '#research'
-    weight: 30
+    weight: 20
         
   - name: Teaching
     url: '#teaching'
-    weight: 40
+    weight: 30
     
   - name: Public Outreach
     url: '#public_outreach'
-    weight: 50
+    weight: 40
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
   - name: CV
     url: uploads/resume.pdf
-    weight: 60
+    weight: 50
